--- a/index.html
+++ b/index.html
@@ -2,13 +2,20 @@
 <html>
 <head>
   <style>
-    body, html { margin:0; padding:0; overflow:hidden; background:black; }
-    video { width:100%; height:100%; object-fit:cover; }
+    body, html {
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background: black;
+    }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   </style>
 </head>
 <body>
-  <video autoplay loop muted>
-    <source src="yourvideo.mp4" type="video/mp4">
-  </video>
+  <img src="ezgif-387a057ae0636b-unscreen.gif" alt="GIF Texture">
 </body>
 </html>
